// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search displays loading spinner when searching 1`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-character-count nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Enter a health related query
    </label>
    <span
      class="nhsuk-hint"
    >
      e.g What is an HRT prescription?
    </span>
    <span
      class="nhsuk-error-message"
    >
      the search query must be more than 4 letters
    </span>
    <textarea
      class="nhsuk-textarea nhsuk-js-character-count nhsuk-textarea--error"
      id="search-input"
      maxlength="100"
      name="search"
      placeholder="type something here"
      rows="1"
    />
  </div>
  <a
    class="nhsuk-button   "
    disabled=""
    id="submit"
  >
    Submit
  </a>
</div>
`;

exports[`Search displays loading spinner when searching 2`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-character-count nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Rhowch gwestiwn sy'n ymwneud â iechyd
    </label>
    <span
      class="nhsuk-hint"
    >
      e.e. Beth yw HRT PPC?
    </span>
    <span
      class="nhsuk-error-message"
    >
      Rhaid i'r ymholiad chwilio fod yn fwy na 4 llythyren
    </span>
    <textarea
      class="nhsuk-textarea nhsuk-js-character-count nhsuk-textarea--error"
      id="search-input"
      maxlength="100"
      name="search"
      placeholder="teipiwch rhywbeth yma"
      rows="1"
    />
  </div>
  <a
    class="nhsuk-button   "
    disabled=""
    id="submit"
  >
    Cyflwyno
  </a>
</div>
`;

exports[`Search displays loading spinner when searching 3`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-character-count nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Cuir fiosrachadh a bhaineas ri slàinte
    </label>
    <span
      class="nhsuk-hint"
    >
      e.g. Dè tha PPC HRT?
    </span>
    <span
      class="nhsuk-error-message"
    >
      feumaidh barrachd air 4 litrichean a bhith anns a' cheist rannsachaidh
    </span>
    <textarea
      class="nhsuk-textarea nhsuk-js-character-count nhsuk-textarea--error"
      id="search-input"
      maxlength="100"
      name="search"
      placeholder="cuir rudeigin an seo"
      rows="1"
    />
  </div>
  <a
    class="nhsuk-button   "
    disabled=""
    id="submit"
  >
    Cuir ris
  </a>
</div>
`;

exports[`Search rendered component should match snapshot (cy) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-character-count nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Rhowch gwestiwn sy'n ymwneud â iechyd
      </label>
      <span
        class="nhsuk-hint"
      >
        e.e. Beth yw HRT PPC?
      </span>
      <textarea
        class="nhsuk-textarea nhsuk-js-character-count "
        id="search-input"
        maxlength="100"
        name="search"
        placeholder="teipiwch rhywbeth yma"
        rows="1"
      />
    </div>
    <a
      class="nhsuk-button   "
      id="submit"
    >
      Cyflwyno
    </a>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (en) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-character-count nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Enter a health related query
      </label>
      <span
        class="nhsuk-hint"
      >
        e.g What is an HRT prescription?
      </span>
      <textarea
        class="nhsuk-textarea nhsuk-js-character-count "
        id="search-input"
        maxlength="100"
        name="search"
        placeholder="type something here"
        rows="1"
      />
    </div>
    <a
      class="nhsuk-button   "
      id="submit"
    >
      Submit
    </a>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (gd) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-character-count nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Cuir fiosrachadh a bhaineas ri slàinte
      </label>
      <span
        class="nhsuk-hint"
      >
        e.g. Dè tha PPC HRT?
      </span>
      <textarea
        class="nhsuk-textarea nhsuk-js-character-count "
        id="search-input"
        maxlength="100"
        name="search"
        placeholder="cuir rudeigin an seo"
        rows="1"
      />
    </div>
    <a
      class="nhsuk-button   "
      id="submit"
    >
      Cuir ris
    </a>
  </div>
</div>
`;
